# nes-qr-gen

./: CMakeLists.txt  Doxyfile  README.md  ascii.chr  chrgen.py  crt0.s  keyboard.c  keyboard.h  main.c  mapper.cfg  mmc3.h  neslib.h  neslib.s  qrcodegen.c  qrcodegen.h  qrirq.h  qrirq.s  rsmt.s  screen.h  screen_about.c  screen_editor.c  screen_qr.c
